--- a/ifts6/src/app/components/error404/error404.component.css
+++ b/ifts6/src/app/components/error404/error404.component.css
@@ -1,22 +1,18 @@
 .page_404 {
-    padding: 40px 0;
     background: #fff;
     font-family: 'Arvo', serif;
     display: flex; /* Agregamos un contenedor flexible */
     justify-content:space-evenly; /* Centramos horizontalmente */
     align-items: center; /* Centramos verticalmente */
     height: 100vh; /* Establecemos la altura de la ventana del navegador */
-}
-
-.page_404 img {
     width: 100%;
 }
 
 .four_zero_four_bg {
     background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-    height: 400px;
+    width: 100%;
+    height: 50vh;
     background-position: center;
-   
 }
 
 .four_zero_four_bg h1 {
