--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -54,7 +54,6 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  
   }
   
   .contenedor-botones {
@@ -100,13 +99,14 @@ header {
     background-color: #1d1c1a;
     display: flex;
     justify-content: space-around;
+    align-items: center;
   }
 
   .user{
     display: flex;
     align-items: center;
     color: white;
-  
+    gap: 0.5rem;
     width: 15%;
   }
 
@@ -122,6 +122,15 @@ header {
       width: 95%;
       margin: 0 auto;
     }
+
+    .btn{
+      padding: 10px 45px;
+    }
+
+    .header-negro{
+      height: 3.5rem;
+    }
+
     .user{
       display: flex;
       align-items: center;
@@ -133,7 +142,7 @@ header {
       padding: 10px;
       padding-top: 5px;
       padding-bottom: 5px;
-      border-radius: 3px;
+      border-radius: 10px;
     }
   }
   
