--- a/ifts6/src/app/components/publicaciones/publicaciones.component.css
+++ b/ifts6/src/app/components/publicaciones/publicaciones.component.css
@@ -1,82 +1,89 @@
-.filtro-botones{
+.filtro-botones {
   display: flex;
   justify-content: end;
-  margin : 1rem;
+  margin: 1rem;
   gap: 0.5rem;
 }
 
-.filtro-botones button{
-    padding: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 3px;
+.filtro-botones button {
+  background-color: #98FF1F;
+  color: black;
+  padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 3px;
 }
 
 /* Estilo para el contenedor de publicaciones */
 .contenedor-pub {
-    min-height: 54.3vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 20px;
-    margin: 1rem;
+  min-height: 54.3vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 1rem;
+}
+
+/* Estilo para cada publicación individual */
+.pub {
+  background-color: #f8f8f8;
+  padding: 20px;
+  border: 10px solid #ddd;
+  border-radius: 5px;
+  width: calc(33.33% - 20px);
+  /* Ajustar el ancho de acuerdo a tus necesidades */
+  box-shadow: -5px -5px rgba(53, 31, 3, 0.568);
+  min-height: 508px;
+}
+
+/* Estilo para el título de la publicación */
+.pub h2 {
+  font-size: 22px;
+  margin: 0;
+  color: #19c3e3;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.pub h3 {
+  font-family: Helvetica, Arial, sans-serif;
+
+}
+
+/* Estilo para la imagen de la publicación */
+.contenedor-img {
+  text-align: center;
+}
+
+.imagen-pub {
+  max-width: 100%;
+  height: 200px;
+  border: 1px solid #ddd;
+}
+
+/* Estilo para el párrafo de descripción */
+.pub p {
+  margin: 10px 0;
+
+}
+
+
+
+/* Estilo para las etiquetas de información */
+.pub label {
+  display: block;
+  margin: 5px 0;
+  font-size: 14px;
+  color: #666;
+}
+
+
+
+@media (max-height : 768) {
+  .contenedor-principal {
+    height: 40.3vh;
   }
-  
-  /* Estilo para cada publicación individual */
+
   .pub {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border: 10px solid #ddd;
-    border-radius: 5px;
-    width: calc(33.33% - 20px); /* Ajustar el ancho de acuerdo a tus necesidades */
-    box-shadow:  -5px -5px rgba(53, 31, 3, 0.568);
+    min-height: 100px;
   }
-  
-  /* Estilo para el título de la publicación */
-  .pub h2 {
-    font-size: 22px;
-    margin: 0;
-    color: #19c3e3;
-    font-family:  Helvetica, Arial, sans-serif;
-  }
-
-  .pub h3{
-    font-family:  Helvetica, Arial, sans-serif;
-    
-  }
-  
-  /* Estilo para la imagen de la publicación */
-  .contenedor-img {
-    text-align: center;
-  }
-  
-  .imagen-pub {
-    max-width: 100%;
-    height: 200px;
-    border: 1px solid #ddd;
-  }
-  
-  /* Estilo para el párrafo de descripción */
-  .pub p {
-    margin: 10px 0;
-   
-  }
-
-  
-  
-  /* Estilo para las etiquetas de información */
-  .pub label {
-    display: block;
-    margin: 5px 0;
-    font-size: 14px;
-    color: #666;
-  }
-
-
-  
-  @media (max-height : 768) {
-    .contenedor-principal{
-        height: 40.3vh;
-    }
 }
