--- a/ifts6/src/app/pages/inicio/inicio.component.css
+++ b/ifts6/src/app/pages/inicio/inicio.component.css
@@ -5,6 +5,8 @@
 }
 
 button{
+    background-color: #98FF1F;
+    color: black;
     padding: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
