--- a/ifts6/src/app/pages/carreras/carreras.component.html
+++ b/ifts6/src/app/pages/carreras/carreras.component.html
@@ -2,7 +2,7 @@
 <div class="contenedor-principal">
 
         <div class="Generalidades">
-            <h2>Generalidades:</h2>
+         <b>  <h2>Generalidades:</h2>
             <p class="Generalidades">
             
                 Título de egreso: TÉCNICO SUPERIOR EN COMERCIO INTERNACIONAL Y ADUANAS (no hay títulos intermedios).<br>
@@ -64,6 +64,6 @@
                     >RESOLUCIÓN Nº 375 /SSGEYCP/12 Contenido programas
                     </a>
                 </div>                
-    
+            </b> 
         </div>
 </div>
