--- a/ifts6/src/app/pages/carreras/carreras.component.css
+++ b/ifts6/src/app/pages/carreras/carreras.component.css
@@ -1,8 +1,9 @@
 /* Estilos generales para todo el documento */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    font-size: 30px; /* Puedes ajustar el tamaño de fuente según tus preferencias */
 }
 
 /* Estilos para el contenedor principal */
@@ -17,12 +18,15 @@ body {
 }
 
 .Generalidades h2 {
-    color: #333;
+    color: #050505;
+    font-size: 25px;
 }
 
 .Generalidades p.Generalidades {
     line-height: 1.6;
-    color: #666;
+    
+    color: #333;
+    font-size: 17px; /* Puedes ajustar el tamaño de fuente según tus preferencias */
 }
 
 /* Estilos para la sección de Nuevo Plan de estudios */
