--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -135,6 +135,7 @@ header {
       display: flex;
       align-items: center;
       color: white;
+      font-size: 20px;
       gap: 0.5rem;
     }
   
@@ -143,6 +144,8 @@ header {
       padding-top: 5px;
       padding-bottom: 5px;
       border-radius: 10px;
+      font-size: 14.4px;
     }
+
   }
   
