--- a/ifts6/src/app/components/publicaciones/publicaciones.component.css
+++ b/ifts6/src/app/components/publicaciones/publicaciones.component.css
@@ -1,17 +1,23 @@
 .filtro-botones {
   display: flex;
   justify-content: end;
+  align-items: center;
   margin: 1rem;
   gap: 0.5rem;
+}
+
+.filtro-botones label{
+  font-size: x-large;
 }
 
 .filtro-botones button {
   background-color: #98FF1F;
   color: black;
-  padding: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 3px;
+  padding: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 5px;
+  font-size: medium;
 }
 
 /* Estilo para el contenedor de publicaciones */
@@ -78,7 +84,18 @@
 
 
 
-@media (max-height : 768) {
+@media (max-height : 770px) {
+  .filtro-botones label{
+    font-size: small;
+  }
+
+  .filtro-botones button {
+    padding: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: small;
+  }
+
   .contenedor-principal {
     height: 40.3vh;
   }
