--- a/ifts6/src/app/pages/detalle/detalle.component.html
+++ b/ifts6/src/app/pages/detalle/detalle.component.html
@@ -1,4 +1,5 @@
 <div class="contenedor-pub">
+    <button (click) = "goBack()" class="goBack"> <i class='bx bx-arrow-back'></i> </button>
     <h1 class="titulo"> {{publicacion.titulo}} </h1>
     <br>
     <h3> <label for="" class="fecha"> Fecha de publicacion: {{publicacion.fecha_Publicacion | date:'dd/MM/yy'}} </label></h3>
@@ -12,5 +13,5 @@
         <p>{{publicacion.descripcion}}</p>
     </h3>
     <br>
-    <h3><label for="" class="usuario"> Publicado por: {{publicacion.nombre_Usuario}}</label></h3>
+    <h3 style="border-top: 1px solid rgb(139, 134, 134);"><label for="" class="usuario"> Publicado por: {{publicacion.nombre_Usuario}}</label></h3>
 </div>
