--- a/ifts6/src/app/pages/detalle/detalle.component.html
+++ b/ifts6/src/app/pages/detalle/detalle.component.html
@@ -1,5 +1,6 @@
 <div class="contenedor-pub">
-    <button (click) = "goBack()" class="goBack"> <i class='bx bx-arrow-back'></i> </button>
+    <button (click) = "goBack()" class="goBack"> <img src="assets/flech.png" alt="Facebook"> </button>
+
     <h1 class="titulo"> {{publicacion.titulo}} </h1>
     <br>
     <h3> <label for="" class="fecha"> Fecha de publicacion: {{publicacion.fecha_Publicacion | date:'dd/MM/yy'}} </label></h3>
