--- a/ifts6/src/app/pages/inicio/inicio.component.css
+++ b/ifts6/src/app/pages/inicio/inicio.component.css
@@ -5,8 +5,8 @@
 }
 
 button {
-    background-color: #98FF1F;
-    color: black;
+    background-color:#007BFF;
+    color:  #f5f5f5;
     padding: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
