--- a/ifts6/src/app/pages/detalle/detalle.component.css
+++ b/ifts6/src/app/pages/detalle/detalle.component.css
@@ -9,12 +9,16 @@
 }
 
 .goBack{
-  width: 5%;
+  width: 1%;
   margin-left: 10%;
   padding: 0.5rem;
   border: 0;
-  background-color: white;
+  background-color:transparent;
   cursor: pointer;
+}
+.goBack img {
+  width: 70px; /* Ajusta el tamaño de la imagen según tus necesidades */
+  height: auto; /* Mantiene la proporción de la imagen */
 }
 
 .bx-arrow-back{
