--- a/ifts6/src/app/pages/ingreso/ingreso.component.html
+++ b/ifts6/src/app/pages/ingreso/ingreso.component.html
@@ -1,1 +1,49 @@
-<app-publicaciones [criterio]="criterioPag"></app-publicaciones>
+<!-- <app-publicaciones [criterio]="criterioPag"></app-publicaciones> -->
+
+<head>
+    <title>Inscripción 1er Cuatrimestre 2024</title>
+</head>
+<body>
+
+  <div class="container">
+    <h1>Inscripción 1er Cuatrimestre 2024</h1>
+    
+    <p>A partir del 30 de octubre quedará habilitada la inscripción para alumnos ingresantes al ciclo lectivo 2024 de la carrera de Técnico Superior en Comercio Internacional y Aduanas.</p>
+
+    <h2>Requisitos de la inscripción:</h2>
+    <ul>
+        <li><b>Título secundario </b>o constancia de título en trámite (si estás por finalizar el secundario deberás inscribirte con una constancia de alumno regular)</li>
+        <li><b>DNI y Preinscripción del GCBA </b>(30/10/2023 al 01/03/2024) Mirá cómo preinscribirte <a href="https://www.youtube.com/watch?v=6jLOQx0zqTo">ACÁ</a></li>
+    </ul>
+
+    <h2>Pasos para la inscripción:</h2>
+    <img src="assets/ingreso1.png" alt="Imagen de referencia">
+    <ol>
+        <li><b>Realizar la preinscripción </b>del GCBA ingresando desde <a href="https://guarani-autogestionagencia.bue.edu.ar/preinscripcion/SSAALV/acceso">ACÁ</a></li>
+        <li><b>Enviar un correo</b> a <a href="mailto:ingreso@ifts6.edu.ar">ingreso@ifts6.edu.ar</a> adjuntando: Título secundario* (ambos lados) DNI (ambos lados) Ficha de preinscripción. En el asunto del correo deberá colocar su Nombre apellido y DNI.</li>
+        <li>Realizar la <b>validación presencial </b>con su título (<b>original</b>), DNI (<b>original</b>) y ficha de preinscripción de manera presencial a partir <b>del 15 de noviembre y hasta el 15 de diciembre </b>de 18.30 a 21hs en Paseo Colon 650 CABA.</li>
+    </ol>
+
+    <p>*En caso de ser constancia de título en trámite o de alumno regular deben estar dirigidas al IFTS6 o a "quién corresponda". Si los estudios los ha cursado en el exterior, tener en cuenta que deberá contar con la correspondiente convalidación (puede consultar <a href="https://www.argentina.gob.ar/educacion/tramites/convalidar-titulo-secundario-de-paises-con-convenio">acá</a> los trámites y certificados necesarios). La carrera se dicta únicamente en el horario nocturno de manera gratuita.</p>
+
+    <h2>CURSO DE PREPARACIÓN - Optativo</h2>
+    <p>Fecha <b>30/10/23 </b>al <b>6/3/24</b></p>
+    <img src="assets/ingreso2.jpg" alt="Imagen de referencia">
+    <p>Te sugerimos realizar los módulos que fueron armados para que puedas prepararte para los exámenes. Ver del aula Moodle <a href="https://drive.google.com/file/d/1cEPwRjfDtrECwIdh71_hWB8E50tk8xzr/view">ACÁ</a></p>
+    <p><b>EXÁMENES </b>Diagnósticos de nivel educativo. 
+        <p>Fecha <b>7/2/24 </b>al <b>6/3/24</b></p>
+        <img src="assets/ingreso3.jpg" alt="Imagen de referencia">
+    Contenidos a evaluar: ECOPE "Estrategias de Comprensión y Producción Escrita" e IPEMAT "Introducción al Pensamiento Matemático.
+
+    <p>Si tenés inconvenientes <b>técnicos </b>podés acceder a soporte técnico desde <a href="https://accounts.google.com/InteractiveLogin/signinchooser?continue=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSeJVB9cpOIJpG5oSyq-YEFhGWqwJ0Nm2tgzy6rlAtjxVkovJw%2Fviewform&followup=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSeJVB9cpOIJpG5oSyq-YEFhGWqwJ0Nm2tgzy6rlAtjxVkovJw%2Fviewform&ltmpl=forms&osid=1&passive=1209600&service=wise&ifkv=ASKXGp0-iXCbkRvYSNz38xpRAWB-unM7-SpNcCH2z2EaKsXOtGHUs-Vzc3vzeUz_-rBkN6CPmihAPQ&theme=glif&flowName=GlifWebSignIn&flowEntry=ServiceLogin">ACÁ</a> o escribir a <a href="mailto:preingreso.ifts@bue.edu.ar">preingreso.ifts@bue.edu.ar</a></p>
+
+    <p>Si necesitas comunicarte con un <b>tutor</b> de nuestro Instituto hacelo a: <a href="mailto:dilma.avalos@bue.edu.ar">dilma.avalos@bue.edu.ar</a></p>
+
+    <p>Paseo Colón 650 CABA</p>
+    <p>Contacto: <a href="mailto:ingreso@ifts6.edu.ar">ingreso@ifts6.edu.ar</a></p>
+    <p>Tutora: <a href="mailto:dilma.avalos@bue.edu.ar">dilma.avalos@bue.edu.ar</a></p>
+  </div>
+  
+</body>
+
+
