--- a/ifts6/src/app/pages/carreras/carreras.component.html
+++ b/ifts6/src/app/pages/carreras/carreras.component.html
@@ -1,18 +1,18 @@
-
+<body>
 <div class="contenedor-principal">
 
         <div class="Generalidades">
-         <b>  <h2>Generalidades:</h2>
+         <h2>Generalidades:</h2>
             <p class="Generalidades">
             
-                Título de egreso: TÉCNICO SUPERIOR EN COMERCIO INTERNACIONAL Y ADUANAS (no hay títulos intermedios).<br>
+               <b> Título de egreso:</b> TÉCNICO SUPERIOR EN COMERCIO INTERNACIONAL Y ADUANAS (no hay títulos intermedios).<br>
                 <br>
-               Nivel Superior de la Educación Técnico Profesional<br>
+               <b>Nivel Superior de la Educación Técnico Profesional</b><br>
                 Carga horaria total de la Carrera : 2672 horas/cátedra equivalentes a 1781 hs reloj.<br>
                 <br>
-                Condiciones de ingreso: Nivel medio aprobado<br>
-                Cursada: De lunes a Viernes en el único horario de 18:30 a 22:30 Hs.<br>
-                Costo/Aranceles: Gratuito.<br>
+                <b>Condiciones de ingreso:</b> Nivel medio aprobado<br>
+               <b>Cursada:</b>  De lunes a Viernes en el único horario de 18:30 a 22:30 Hs.<br>
+                <b>Costo/Aranceles: </b>Gratuito.<br>
             </p>
 
             <br>
@@ -64,6 +64,7 @@
                     >RESOLUCIÓN Nº 375 /SSGEYCP/12 Contenido programas
                     </a>
                 </div>                
-            </b> 
+           
         </div>
 </div>
+</body>
