--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -31,6 +31,7 @@
                 <a (click)="irPagina('extension')"><button class="btn">Extensión terciaria</button></a>
                 <a (click)="irPagina('convenios')"><button class="btn">Convenios</button></a>
                 <a (click)="irPagina('contacto')"><button class="btn">Contacto</button></a>
+                <a (click)="irPagina('admin')"><button class="us"><img src="assets/usu.png" alt="usuario"></button></a>
             </div>
 
             <div class="user" *ngIf="login.getConectado().conectado">
