--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -125,6 +125,23 @@ header {
     border: none;
     
   }
+  .us{
+    width: 1%;
+    margin-left: 0.3%;
+    padding: 0.5rem;
+    border: 0;
+    background-color:transparent;
+    cursor: pointer;
+    margin-top: 0; 
+  }
+  .us img {
+   width: 37px; /* Ajusta el tamaño de la imagen según tus necesidades */
+   height: auto; /* Mantiene la proporción de la imagen */
+   border-radius: 10px;
+   margin-top: 0; 
+   margin-bottom: -14px;
+   
+  }
 
   @media (min-width: 1400px) {
     .container {
