--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -4,16 +4,15 @@
     <div class="fondo">
         <div class="container">
             <div class="row">
-                <div class="col-m-6 col-s-6 text-left oculto">
+                <div class="col-m-6 col-s-6 text-left oculto grande">
                     <h5 class="sub-brand"><img src="assets/ifts6.png" class="header-logo-izquierda"></h5>
                     <!-- <div class="titulo_instituto">IFTS N° 6</div> -->
                 </div>
                     
-                <div class="titulo_web">Comercio Internacional y Aduanas</div>
+                <div class="titulo_web grande">Comercio Internacional y Aduanas</div>
                                 
-                <div class="col-m-6 col-s-6 text-right oculto">
+                <div class="col-m-6 col-s-6 text-right oculto grande">
                     <p class="links"><a href="https://buenosaires.gob.ar/educacion" target="_blank"><h5 class="sub-brand"><img src="assets/bae.png" class="header-logo-derecha" ></h5></a></p>
-                    
                 </div>
             </div>
         </div>
