--- a/ifts6/src/app/pages/detalle/detalle.component.html
+++ b/ifts6/src/app/pages/detalle/detalle.component.html
@@ -3,7 +3,7 @@
 
     <h1 class="titulo"> {{publicacion.titulo}} </h1>
     <br>
-    <h3> <label for="" class="fecha"> Fecha de publicacion: {{publicacion.fecha_Publicacion | date:'dd/MM/yy'}} </label></h3>
+    <h3> <label for="" class="fecha"> Fecha de publicación: {{publicacion.fecha_Publicacion | date:'dd/MM/yy'}} </label></h3>
     <br>
     <h3><label for="" class="sector"> Sector: {{publicacion.sector}} </label></h3>
     <br>
